[gd_scene format=3 uid="uid://l27t6yek3gdb"]

[ext_resource type="Theme" uid="uid://b1isuu0lcmwbl" path="res://Jericho/ui/general.tres" id="1_vakgp"]
[ext_resource type="StyleBox" uid="uid://dplkulcc0u3xg" path="res://Jericho/ui/styleboxes/stylebox_flat_black.tres" id="2_4vk8y"]
[ext_resource type="Script" uid="uid://3pompr6h22ym" path="res://Jericho/ui/panels/game_over_panel.gd" id="3_4vk8y"]
[ext_resource type="PackedScene" uid="uid://cjb3p7p726yth" path="res://game_folder/scenes/game_scene.tscn" id="4_mecn8"]
[ext_resource type="PackedScene" uid="uid://bpvq5oowjtbgm" path="res://Jericho/ui/panels/main_menu_panel.tscn" id="5_0tob4"]

[node name="GameOverPanel" type="PanelContainer" unique_id=266422431]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vakgp")
theme_override_styles/panel = ExtResource("2_4vk8y")
script = ExtResource("3_4vk8y")
main_level_scene = ExtResource("4_mecn8")
main_menu_scene = ExtResource("5_0tob4")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=134302664]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=1298275601]
layout_mode = 2
theme_override_constants/separation = 36
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer" unique_id=1412684889]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 128
text = "Game Over"

[node name="RestartButton" type="Button" parent="MarginContainer/VBoxContainer" unique_id=1407705587]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Restart"

[node name="MainMenuButton" type="Button" parent="MarginContainer/VBoxContainer" unique_id=781141636]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Main Menu"

[connection signal="pressed" from="MarginContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
